# anaouder-gui

./: .gitignore  Anaouder-editor.spec  README-en.md  README-fr.md  README.md  anaouder-ali_filetype.xml  anaouder-editor.desktop  anaouder.desktop  anaouder.spec  commands.py  export_srt.py  install.sh  main.py  ostilhou.py  pyproject.toml  recognizer_worker.py  requirements.txt  shortcuts.py  text_widget.py  theme.py  utils.py  version.py  video_widget.py  waveform_widget.py
.github/workflows/: package_macos_intel.yml  package_win64.yml
building/: anaouder_installer.iss
building/Linux/: Anaouder.desktop  build_linux_appimage.sh
building/Windows/: anaouder_installer.iss
icons/: icon.icns  licence.txt
src/: about_page.py  actions.py  adapt_subtitles.py  aligner.py  auto_segment.py  cache_system.py  commands.py  config.py  document.py  document_controller.py  export.py  export_eaf.py  export_srt.py  export_txt.py  file_manager.py  hunspell.py  icons.py  interfaces.py  levenshtein_aligner.py  main.py  media_player_controller.py  parameters_dialog.py  recognizer_worker.py  renderer.py  scene_detector.py  settings.py  shortcuts.py  splitter.py  strings.py  text_widget.py  theme.py  transcriber.py  utils.py  version.py  video_widget.py  waveform_widget.py
src/lang/: __init__.py  (+3 more)
tests/: MeliMilaMalou.ali  test_adapt_subtitles.py  test_aligner.py  test_cache_system.py  test_commands.py  test_document_controller.py  test_export.py  test_file_manager.py  test_text_widget.py
translations/: anaouder_br.qm  anaouder_br.ts  anaouder_en.ts  anaouder_fr.qm  anaouder_fr.ts
(+18 files in other folders)
